Migrate to Java 21 and Scala 2.13.18
- Update Java from 8/11 to 21
- Update Scala to 2.13.18 only (removed 2.12 cross-compilation)
- Update sbt to 1.10.8
- Replace deprecated GC flags with G1GC
- Update compiler targets to Java 21
- Add Java module reflection access flags for tests